--- a/Mycss.css
+++ b/Mycss.css
@@ -1,62 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="Ass2-css-page.css" type="text/css" rel="stylesheet">
-</head>
-<body>
-    <h1 class="btsu">About Btsuan Eyakem</h1>
-    <p>I am very <span>Sarcastic, Entusiastic</span>  person, but i am also <span>stuborn</span></p>
-    <h3>My class This Quarter</h3>
-    <table id="table">
-        <tr>
-            <th>CSE 451</th>
-            <td>-Fundumentals of Programing</td>     
-        </tr>
-        <tr>
-            <th>CSE 471</th>
-            <td>-Modern Programing</td>
-        </tr>
-        <tr>
-            <th>CSE 530</th>
-            <td>-Software Arctecture</td>
-        </tr>
-        <tr>
-            <th>CSE 380</th>
-            <td>-Wep Application programing</td>
-        </tr>
-    </table>
-    <br>
-    <h3>My Favorite Movie</h3>
-    <i>(I actualy don't watch to much movies but here it goes)</i>
-    <ul class="movies">
-        <li>Any one But you<a href="https://www.justwatch.com/us/movies" rel="noopener"> (IDBM)</a></li>
-        <li>The fault in our stars<a href="https://tubitv.com/home"> (IDBM)</a></li>
-        <li>The persute of Happiness <a href="https://www.plex.tv/watch-free/"> (IDBM)</a></li>
-    </ul>
-    <br>
-    <h3>My Mood</h3>
+h1{
+    color: rgb(17, 44, 132);
+    font-weight: bolder;
+}
+span{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: italic;
+    font-weight: 600;
+}
+#table{
+    margin: 2%;
+    /*text-align: right;*/
+    list-style-type: circle;
+    font-style: italic;
+}
+h3{
+    margin: 2%;
+    color: blue;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
     
-    <div>
-        <em>Happy:</em><img src="istockphoto-157396697-612x612.jpg" alt="happy emoji" width="300" height="300">
-        <em>sad:</em><img src="sad-cat-pictures-15mvoegirj9khh3u.jpg" width="300" height="300">
+}
+.movies{
+   
+    list-style-type: decimal;
+}
+a:link{
+    color: rgb(8, 8, 129);
+}
+a:hover{
+    color: rgb(162, 18, 138);
+}
+ul.li{
+    list-style-type: circle;
+}
+body{
+    margin: 20px; 
+    border: 1px solid black; 
+    background-color: #7a6767; 
+    box-sizing: border-box; 
+    
+}
+/*a:visited{
+    color: cyan;
+}*/
 
-    </div>
-    <br></br>
-    <h3>Fun Fact About My Neighbores</h3>
-    <ul>
-        <li>Maya: stays up all night</li>
-        <li>lili: hard worker!</li>
-    </ul>
-    <div>
-        <a href="sad-cat-pictures-15mvoegirj9khh3u.jpg">
-            <img src="HTML-checker.png" width="80" height="80">
-        </a>
-        <a href="sad-cat-pictures-15mvoegirj9khh3u.jpg">
-            <img src="css_checker.png" width="80" height="80">
-        </a>
-    </div>
-</body>
-</html>
